<resources>
    <string name="app_name">VirgilBack4App</string>

    <!-- Virgil -->
    <string name="virgil_token">AT.8641c450a983a3435aebe7994fd4c0f60babea997d29b3e8eed7b35beab72be3</string>
    <string name="virgil_app_id">bd7bf7e832f16e2b3f61fa47682cbfc6b3d31f90778ab0e15515aa775e7b7db3</string>
    <string name="virgil_app_public_key">MCowBQYDK2VwAyEAyY/Lo4u1st9lveTnsNp7rmAo0aa5y2VihTJrj/wPbCU=</string>

    <!-- Back4App -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_live_query_url">wss://virgilmsgrandroid.back4app.io/</string>
    <string name="back4app_app_id">0YP4zSHDOZy5v50BvGe2ttGRkGbuXaaBTUnr6wfH</string>
    <string name="back4app_client_key">Wu1T8l9AriZVqDbMoZQbz2AXKvh3sPnEqYabPez7</string>

    <!-- General -->
    <string name="no_internet">Please, check your internet state</string>
    <string name="error_loading">Please, swipe from top to retry</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="press_exit_once_more">Press back once more to exit</string>

    <!-- Login Screen -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_empty">Please, enter username</string>
    <string name="no_such_user">Entered username is invalid or not registered yet</string>
    <string name="already_registered">Entered username has been already registered. Please try another one</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>

    <!-- Threads List Screen -->
    <string name="contacts">Contacts</string>
    <string name="no_threads">No conversations yet.\nYou can start new conversation\nfrom navigation drawer.</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="create_thread">Create thread</string>
    <string name="enter_username">Enter username to start chat with</string>
    <string name="creating_thread">Creating thread…</string>
    <string name="thread_exists">Current thread already exists</string>
    <string name="no_chat_with_yourself">No chats with yourself, please</string>

    <!-- Drawer -->
    <string name="new_chat">New Conversation</string>
    <string name="log_out">Log out</string>
    <string name="no_messages">No messages yet.\nBut You can fix it (:</string>

</resources>
