<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/snow">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="230dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.34"
            app:srcCompat="@drawable/ic_logo_virgil" />

        <FrameLayout
            android:id="@+id/flBtnContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/ddble_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputBlack">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingEnd="36dp"
                    android:theme="@style/TextInputBlack"
                    tools:text="Shddsabhjdsaiuhdahuidsajdhdhhhhhhhsssssiiiiiiiii" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="6dp"
                android:visibility="invisible" />
        </FrameLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="2dp"
            android:background="@drawable/bg_log_in_buttons"
            android:text="@string/login"
            android:textColor="@color/snow"
            app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flBtnContainer" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="@drawable/bg_log_in_buttons"
            android:text="@string/signup"
            android:textColor="@color/snow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/flBtnContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
